gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-doc_keyword.rs
#[doc(keyword = "match")] // { dg-error ".E0658." "" { target *-*-* } }
/// wonderful
mod foo{}

fn main() {}

